<resources>
    <string name="app_name">MyWeather</string>

    <string name="add_weather">Add weather</string>
    <string name="Home">Home</string>
    <string name="delete_weather">Delete</string>
    <string name="card_edit">Edit</string>
    <string name="card_loading">Loading please wait…</string>
    <string name="ireland_tipperary_cahir">Ireland,Tipperary,Cahir</string>
    <string name="weather_image">Weather_Image</string>
    <string name="_15_c">loading...°C</string>
    <string name="_18_c"></string>
    <string name="tue">Tue</string>
    <string name="today">Today</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="county_optional">County (Optional)</string>
    <string name="city">City</string>
    <string name="link">Link</string>
    <string name="confirm_edit">Confirm Edit</string>
    <string name="country">Country</string>
    <string name="location">Location</string>
    <string name="editimage">editimage</string>
    <string name="add_by_url">Add by URL</string>
    <string name="loading">Loading…</string>
    <string name="please_wait">Please wait…</string>
    <string name="view_weather">View Weather</string>


    <string name="action_menu">Home</string>
    <string name="action_weathList">Weather List</string>
    <string name="action_addweather">Add Weather</string>
    <string name="action_weathEdit">Edit Weather</string>
    <string name="action_weekstats">Week Statistics</string>
    <string name="weather_List">View Weather</string>
    <string name="group_Manage">Manage Weather</string>

    <string name="edit_fail">Failed to edit</string>
    <string name="add_fail">Failed to create</string>

    <string name="nav_email_title">users email</string>
    <string name="nav_header_subtitle">myWeather</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="firebase">https://myweather-95318-default-rtdb.firebaseio.com/</string>
    <string name="web_scrape">Web Scrape?</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="sign_out">Sign out</string>
    <string name="account_control">Account Control</string>
    <string name="theme_control">Theme Control</string>
    <string name="change_theme">Change Theme</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="add_weather_via_map">Add weather via map</string>
    <string name="mapFragmentTitle">Choose location</string>
    <string name="get_started">Get started</string>

</resources>