<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuFragment"
            android:icon="@drawable/ic_menu_weather"
            android:title="@string/Home" />
        <item
            android:id="@+id/weatherListFragment"
            android:icon="@drawable/ic_list_weather"
            android:title="@string/weather_List" />
    </group>

    <item android:title="@string/group_Manage">
        <menu>
            <item
                android:id="@+id/weatherFragment"
                android:icon="@drawable/ic_add_weather"
                android:title="@string/add_weather" />

        </menu>
    </item>
</menu>