<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="top"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Light"
    android:layout_gravity="fill_horizontal"
    >

    <ImageView
        android:id="@+id/imageViewLoggedIn"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/rainycloudysunny" />

    <ImageView
        android:id="@+id/imageViewWeatherIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/rainycloudysunny" />




        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/emailText"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/nav_header_subtitle" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="start"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_email_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</RelativeLayout>

